--- a/Docs/deployment-sample.yaml
+++ b/Docs/deployment-sample.yaml
@@ -14,7 +14,10 @@ spec:
   selector:
     matchLabels:
       app: myapp-pod
-
+      #version: 
+      #release: 
+      #slot: green
+      
   #define template for the pod
   template:  
   #specify the metadata for the pod including the name and the labels.
@@ -23,6 +26,9 @@ spec:
       #this label selector will be used to be selected by the deployment and the service
       labels:
         app: myapp-pod
+        #version: 
+        #release: 
+        #slot: green
 
     #define the specification for the container to be created from the docker image
     spec:
