--- a/redis/1/redis-deployment.yaml
+++ b/redis/1/redis-deployment.yaml
@@ -23,3 +23,17 @@ spec:
         ports:
         - name: redis-server
           containerPort: 6379
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: redis
+  labels:
+    app: redis
+    visualize: "true"
+spec:
+  ports:
+    - port: 6379
+  selector:
+    app: redis
