--- a/.NET/1/azure-pipelines.yml
+++ b/.NET/1/azure-pipelines.yml
@@ -15,6 +15,8 @@ variables:
 
 
 
+###### Build stage ######
+
 stages:
 - stage: Build
   displayName: Build stage
@@ -44,3 +46,40 @@ stages:
        targetPath: '$(Pipeline.Workspace)/manifests'
        artifact: 'manifests'
        publishLocation: 'pipeline'
+
+
+
+
+###### Deploy stage ######
+
+- stage: Deploy
+  displayName: Deploy stage
+  dependsOn: Build
+
+  jobs:
+  - deployment: Deploy
+    displayName: Deploy
+    pool:
+      vmImage: $(vmImageName)
+    environment: 'mywebapp.default'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: KubernetesManifest@0
+            displayName: Create imagePullSecret
+            inputs:
+              action: createSecret
+              secretName: $(imagePullSecret)
+              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+
+          - task: KubernetesManifest@0
+            displayName: Deploy to Kubernetes cluster
+            inputs:
+              action: deploy
+              manifests: |
+                $(Pipeline.Workspace)/k8s.yml
+              imagePullSecrets: |
+                $(imagePullSecret)
+              containers: |
+                $(containerRegistry)/$(imageRepository):$(tag)
