--- a/nginx/1/services/flask-ingress.yaml
+++ b/nginx/1/services/flask-ingress.yaml
@@ -40,3 +40,22 @@ spec:
 #  selector:
 #    run: flask-app
 #  type: LoadBalancer
+
+
+
+#### Nodeport ####
+
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  labels:
+#    run: flask-app
+#  name: flask-app
+#spec:
+#  ports:
+#  - port: 5000
+#    protocol: TCP
+#    targetPort: 5000
+#  selector:
+#    run: flask-app
+#  type: NodePort
