Update and rename argocd/3/apps/oauth2-proxy-grafana/oauth2-proxy-grafana.yaml to argocd/3/apps/oauth2-proxy/oauth2-proxy.yaml

--- a/argocd/3/apps/oauth2-proxy/oauth2-proxy.yaml
+++ b/argocd/3/apps/oauth2-proxy/oauth2-proxy.yaml
@@ -36,3 +36,22 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: prometheus-operator
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: oauth2-proxy-istio-grafana
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  project: default
+  source:
+    repoURL: 
+    path: oauth2-proxy
+    helm:
+      valueFiles:
+      - istio-grafana.yaml
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: istio-system
