--- a/argocd/3/apps/prometheus/prometheus2.yaml
+++ b/argocd/3/apps/prometheus/prometheus2.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     helm:
       valueFiles:
-      - dev/values.yaml
+      - k8s/prometheus/1/values.yaml
     path: prometheus
     repoURL: ' '
     targetRevision: HEAD
